# jals

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_jp.md  biome.json  clippy.toml  jals-fmt.toml  package.json  rustfmt.toml  sgconfig.yml  typos.toml
.ast-grep/rules/: no-extern-crate-alloc.yml  no-extern-crate-core.yml  no-free-functions.yml  no-portable-host-path.yml
.ast-grep/tests/: no-extern-crate-alloc-test.yml  no-extern-crate-core-test.yml  no-free-functions-test.yml  no-portable-host-path-test.yml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  update-submodules.yml
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: binary.rs  cache.rs  github.rs  lib.rs  platform.rs
examples/hello_world/: README.md  jals.toml
examples/minecraft-1.21.1-mojang-remap/: README.md  build.rhai  jals.toml
examples/minecraft-mojang-remap/: .gitignore  README.md  build.rhai  jals.toml
examples/rhai_build_script/: README.md  build.rhai  (+1 more)
jals-build/: Cargo.toml  README.md
jals-build/src/: backend.rs  build_script.rs  builtin.rs  clean.rs  init.rs  invocation.rs  lib.rs  manifest.rs  manifest_ext.rs  native.rs  request.rs  staging.rs  target.rs  task.rs  toolchain.rs
jals-classfile/: Cargo.toml
jals-classfile/src/: annotation.rs  attribute.rs  bytes.rs  class_file.rs  constant_pool.rs  descriptor.rs  error.rs  field.rs  flags.rs  instruction.rs  lib.rs  method.rs  signature.rs  stackmap.rs
jals-classfile/tests/: attributes.rs  descriptors.rs  instructions.rs  roundtrip.rs  streaming.rs
jals-classfile/tests/fixtures/: README.md
jals-classfile/tests/fixtures/src/: Iface.java  Plain.java  Sample.java  Switches.java  TypeAnno.java
jals-classfile/tests/fixtures/src/module/: module-info.java
jals-classfile/tests/fixtures/src/module/com/example/demo/: Api.java
jals-classpath/: Cargo.toml
jals-classpath/src/: io.rs  lib.rs  load.rs  mappings.rs  native.rs  project.rs  remap.rs  resolve.rs  skeleton.rs  zip.rs
jals-classpath/tests/: decompile.rs  extract.rs  load.rs  native_git.rs  native_plan.rs  nested.rs  project.rs  remap.rs  resolve.rs  source_deps.rs
jals-classpath/tests/fixtures/: Outer.java  README.md
jals-classpath/tests/fixtures/src/: Arrays.java  Branchy.java  Cmp.java  Concat.java  Consts.java  FakeOrdinal.java  IntCarried.java  InvokeSpecialCalls.java  Locals.java  Loops.java  Sb.java  Switches.java
jals-classpath/tests/fixtures/src/hierarchy-evolution/v1/: HierarchyEvolution.java
jals-classpath/tests/fixtures/src/hierarchy-evolution/v2/: HierarchyBase.java  HierarchyRight.java
jals-cli/: Cargo.toml
jals-cli/src/: main.rs  report.rs
jals-cli/tests/: cli.rs
jals-config/: Cargo.toml
jals-config/src/: lib.rs  lint.rs  loader.rs  manifest.rs  toolchain.rs
jals-config/src/fmt/: literals.rs  mod.rs  options.rs  tests.rs
jals-decompile/: Cargo.toml  README.md
jals-editor/: Cargo.toml
jals-editor/src/: diagnostics.rs  document.rs  editor.rs  folding.rs  host.rs  lib.rs  outline.rs  queries.rs  selection.rs  semantic.rs
jals-editor/src/workspace/: file_id.rs  mod.rs
jals-exec/: Cargo.toml
jals-exec/src/: inline.rs  lib.rs  task.rs  tokio_rt.rs  wasm.rs  yields.rs
jals-fmt/: Cargo.toml  README.md  jalsfmt.toml
jals-fmt/src/: comments.rs  config.rs  doc.rs  imports.rs  lib.rs  lower.rs  modifiers.rs  output.rs  render.rs  wrap.rs
jals-fmt/src/config/: error.rs  literals.rs  mod.rs  options.rs  tests.rs
jals-fmt/src/lower/: blocks.rs  chains.rs  delimited.rs  enums.rs  expr.rs  inline.rs  mod.rs  tokens.rs
jals-fmt/src/rules/: imports.rs  mod.rs  modifiers.rs  parameter_comment.rs  trailing_comma.rs
jals-fmt/src/rules/literals/: float_zero.rs  hex_case.rs  mod.rs  suffix_case.rs
jals-fmt/tests/: formatter.rs  invariants.proptest-regressions  invariants.rs
jals-frontend/: Cargo.toml
jals-frontend/src/: attr.rs  dialect.rs  driver.rs  frontend.rs  ir.rs  key.rs  level.rs  lib.rs  tests.rs  vanilla.rs
jals-fs/: Cargo.toml
jals-fs/src/: error.rs  lib.rs  mem.rs  os.rs  path.rs
jals-hir/: Cargo.toml
jals-lint/: Cargo.toml
jals-lint/src/: config.rs  diagnostic.rs  lib.rs
jals-lint/src/rules/: attribute.rs  compact_source_file.rs  constant_condition.rs  empty_catch.rs  grouped_import.rs  missing_braces.rs  mod.rs  module_import.rs  naming.rs  type_mismatch.rs  unreported_exception.rs  unused_local.rs  wildcard_import.rs
jals-lint/tests/: invariants.rs  lint.rs
jals-lsp/: Cargo.toml  README.md
jals-lsp/src/: actor.rs  file_id.rs  formatting.rs  host.rs  lib.rs  line_index.rs  server.rs  state.rs
jals-lsp/src/handlers/: completion.rs  definition.rs  diagnostics.rs  document_highlight.rs  folding_range.rs  formatting.rs  hover.rs  mod.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  symbols.rs
jals-playground/: Cargo.toml  index.html
jals-playground/js/: monaco_glue.js
jals-playground/src/: app.rs  fetcher.rs  host.rs  line_index.rs  main.rs  monaco.rs  providers.rs  workspace.rs
jals-playground/src/components/: deps_bar.rs  editor_pane.rs  file_tree.rs  header.rs  mod.rs  settings_bar.rs  syntax_pane.rs
jals-project/: Cargo.toml
jals-project/src/: assemble.rs  graph.rs  lib.rs  memory.rs  native.rs  task.rs
jals-project/tests/: project_graph.rs
jals-storage/: Cargo.toml
jals-storage/src/: cache.rs  error.rs  io.rs  lib.rs  native.rs  storage.rs  tree.rs  value.rs
jals-syntax/: Cargo.toml  java.ungram
jals-syntax/proptest-regressions/parser/: mod.txt
jals-syntax/src/: ast.rs  cfg.rs  language.rs  lexer.rs  lib.rs  syntax_error.rs  syntax_kind.rs  token.rs
jals-syntax/src/ast/: ext.rs  generated.rs  mod.rs
jals-syntax/src/parser/: event.rs  grammar.rs  input.rs  marker.rs  mod.rs  prop.rs  sink.rs  tests.rs  token_set.rs
jals-syntax/tests/: lexer_corpus.rs
jals-tests/: Cargo.toml  README.md
jals-tests/scripts/: gen-openjdk-gjf.sh
jals-tests/src/: golden.rs  lib.rs  main.rs
jals-tests/tests/: cli.rs
xtask/: Cargo.toml
(+57 files in other folders)
