[workspace]
resolver = "3"
members = [
  "jals-build",
  "jals-classfile",
  "jals-classpath",
  "jals-cli",
  "jals-fmt",
  "jals-hir",
  "jals-lint",
  "jals-lsp",
  "jals-playground",
  "jals-syntax",
  "jals-tests",
  "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.99" }
ariadne = { version = "0.6.0" }
async-lsp = { version = "0.2.4" }
clap = { version = "4.6.1", features = ["derive"] }
futures = { version = "0.3" }
jals-build = { path = "jals-build" }
jals-classfile = { path = "jals-classfile" }
jals-classpath = { path = "jals-classpath" }
jals-fmt = { path = "jals-fmt" }
jals-hir = { path = "jals-hir" }
jals-lint = { path = "jals-lint" }
jals-lsp = { path = "jals-lsp" }
jals-syntax = { path = "jals-syntax" }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.19" }
rayon = { version = "1" }
# Host-only (jals-classpath downloads dependency jars). `rustls-tls` for pure-Rust TLS (no system
# OpenSSL, so it cross-compiles cleanly); `blocking` fits the sync CLI. `default-features = false`
# drops the OpenSSL-backed default TLS, keeping it out of the pure/`wasm32` crates.
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
rowan = { version = "0.16.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0" }
similar = { version = "3" }
text-size = { version = "1.1.1" }
tokio = { version = "1", features = ["net", "rt"] }
toml = { version = "1.1.2" }
tower = { version = "0.5" }
ungrammar = { version = "1.16" }
# Pinned: 0.1.3 ships Unicode 16.0.0 tables, matching the tables the previous
# lexer implementation baked in; 0.1.4 moves to Unicode 17.
unicode-properties = { version = "=0.1.4" }
unicode-width = { version = "0.2.1" }
walkdir = { version = "2" }
# Host-only (jals-classpath reads jars). `deflate` is the only compression jars use; disabling the
# rest keeps the dependency tree small and out of the pure/`wasm32` crates.
zip = { version = "2", default-features = false, features = ["deflate"] }
