[workspace]
resolver = "3"
members = [
  "jals-build",
  "jals-classfile",
  "jals-classpath",
  "jals-cli",
  "jals-config",
  "jals-decompile",
  "jals-editor",
  "jals-exec",
  "jals-fmt",
  "jals-storage",
  "jals-hir",
  "jals-lint",
  "jals-lsp",
  "jals-playground",
  "jals-syntax",
  "jals-tests",
  "xtask",
]
# The Zed extension (`editors/zed`) is a `wasm32-wasip1` `cdylib` with its own workspace root; it
# is not a member and must not inherit the workspace lints or be built by `--workspace`.
exclude = ["editors/zed"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/topi-banana/jals"
homepage = "https://github.com/topi-banana/jals"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0.99" }
ariadne = { version = "0.6.0" }
async-lsp = { version = "0.2.4" }
clap = { version = "4.6.1", features = ["derive"] }
# Raw-deflate decompression and crc32 for jals-classpath's in-house zip reader; both stay
# `default-features = false` so the archive path is `no_std + alloc` and wasm-safe.
crc32fast = { version = "1", default-features = false }
futures = { version = "0.3" }
hashbrown = { version = "0.17" }
# `default-features = false`: `jals-build`'s host half (`SubprocessToolchain`) is behind its
# `native` feature. Consumers that spawn `javac`/`java` (jals-cli) opt in with
# `features = ["native"]`; everyone else gets the pure core, so the wasm builds stay honest.
jals-build = { path = "jals-build", default-features = false }
jals-classfile = { path = "jals-classfile" }
jals-classpath = { path = "jals-classpath" }
jals-config = { path = "jals-config" }
jals-decompile = { path = "jals-decompile" }
jals-editor = { path = "jals-editor" }
jals-exec = { path = "jals-exec", default-features = false }
jals-fmt = { path = "jals-fmt" }
jals-storage = { path = "jals-storage", default-features = false }
jals-hir = { path = "jals-hir" }
jals-lint = { path = "jals-lint" }
jals-lsp = { path = "jals-lsp" }
jals-syntax = { path = "jals-syntax" }
miniz_oxide = { version = "0.9", default-features = false, features = [
  "with-alloc",
] }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.19" }
rayon = { version = "1" }
# Host-only (jals-classpath downloads dependency jars). `rustls-tls` for pure-Rust TLS (no system
# OpenSSL, so it cross-compiles cleanly); the async client runs on the workspace's current-thread
# tokio runtime. `default-features = false` drops the OpenSSL-backed default TLS, keeping it out
# of the pure/`wasm32` crates.
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
rowan = { version = "0.16.1" }
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1.0" }
similar = { version = "3" }
text-size = { version = "1.1.1" }
tokio = { version = "1", features = ["net", "rt"] }
# Non-unix only: adapts tokio's stdin/stdout into futures' `Async{Read,Write}` for the LSP loop
# (async-lsp's `stdio` pipe helpers are unix-only). See jals-lsp/src/server.rs.
tokio-util = { version = "0.7", features = ["compat"] }
toml = { version = "1.1.2", default-features = false, features = [
  "parse",
  "serde",
] }
sha2 = { version = "0.11.0", default-features = false }
tower = { version = "0.5" }
ungrammar = { version = "1.16" }
# Pinned: 0.1.3 ships Unicode 16.0.0 tables, matching the tables the previous
# lexer implementation baked in; 0.1.4 moves to Unicode 17.
unicode-properties = { version = "=0.1.4" }
unicode-width = { version = "0.2.1" }
walkdir = { version = "2" }
# Dev-only: jals-classpath reads jars through its own portable zip reader; the `zip` crate remains
# solely to write test fixtures and cross-verify that reader. `deflate` is the only compression
# jars use.
zip = { version = "8", default-features = false, features = ["deflate"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

redundant_clone = "warn"
needless_collect = "warn"
large_enum_variant = "warn"
large_types_passed_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
needless_pass_by_value = "warn"
ptr_arg = "warn"
manual_memcpy = "warn"
manual_slice_fill = "warn"
iter_count = "warn"
bytes_count_to_len = "warn"
unnecessary_to_owned = "warn"
implicit_clone = "warn"
# Ban `<&str>.to_string()` in favor of the more explicit `.to_owned()`; the redundant
# `String::to_string()` case is already covered by `implicit_clone` (clippy retired
# `string_to_string`), and `&&str`/`Display`-machinery misuse by `inefficient_to_string`.
str_to_string = "warn"
# Further `restriction`-group allocation lints (not in any preset group, opted in individually):
# `format_push_string` bans `s.push_str(&format!(..))` (an intermediate `String` alloc; prefer
# `write!`), `rc_buffer` bans `Rc<String>`/`Rc<Vec<T>>` (double indirection; prefer `Rc<str>`/
# `Rc<[T]>`), and `string_add`/`string_add_assign` ban `String + &str` allocation via `+`.
format_push_string = "warn"
rc_buffer = "warn"
string_add = "warn"
string_add_assign = "warn"

dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

module_name_repetitions = "allow"
# The whole workspace is deliberately `!Send`-async: runtimes are current-thread everywhere and
# multi-core parallelism happens only through `jals-exec`'s fan-out (workers drive `!Send`
# futures locally). Requiring `Send` futures would contradict the execution model.
future_not_send = "allow"
# `pub(crate)` in a private module is a deliberate crate-internal intent marker; the nursery lint
# that flags it as redundant would erase that signal, so keep it off.
redundant_pub_crate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
