[package]
name = "jals-build"
version.workspace = true
edition.workspace = true

[features]
# On by default: the host `SubprocessToolchain` (JDK discovery + `javac`/`java` spawning) and the
# `<dyn Toolchain>::select` backend factory and native project-storage adapter in `native.rs`.
# Portable target/scaffold planning stays filesystem/process-free, so `--no-default-features` builds a
# `wasm32`-compatible core a future in-browser compiler can implement.
default = ["native"]
native = ["jals-storage/std"]

[dependencies]
# The pure `jals.toml` model (`Manifest` and friends) lives in `jals-config`; `jals-build` adds the
# host-only `std::path`-based resolution (`ManifestExt`) on top. `toml` remains for `ManifestError`'s
# `toml::de::Error` field type. `jals-storage` supplies typed project keys, revisions, and the
# memory/native aggregate used by the builtin backend.
jals-config.workspace = true
jals-storage.workspace = true
toml.workspace = true

[lints]
workspace = true
