[package]
name = "jals-classpath"
version.workspace = true
edition.workspace = true

[features]
# Archive decoding is implemented in-house over the portable `jals_storage::io` byte streams
# (`src/zip.rs`), so `archive` is fully `no_std + alloc` and wasm-safe. Native adds the async HTTP
# adapter and the host git/path materializers; project and cache access remains entirely in
# `jals-storage`.
default = ["native"]
archive = ["dep:miniz_oxide", "dep:crc32fast"]
native = [
  "archive",
  "dep:reqwest",
  "dep:tempfile",
  "jals-storage/std",
  "jals-exec/tokio",
]

[dependencies]
jals-classfile.workspace = true
jals-config.workspace = true
jals-decompile.workspace = true
jals-exec.workspace = true
jals-storage.workspace = true
miniz_oxide = { workspace = true, optional = true }
crc32fast = { workspace = true, optional = true }
# Host-only async HTTP adapter. Kept out of the no-`native` build, which injects a `Fetcher`.
reqwest = { workspace = true, optional = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
jals-syntax.workspace = true
# Fixture writer and cross-verification oracle for the in-house zip reader; never a runtime dep.
zip.workspace = true
tempfile = "3"

[lints]
workspace = true
