[package]
name = "jals-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "jals"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ariadne.workspace = true
clap.workspace = true
jals-build.workspace = true
jals-fmt.workspace = true
jals-hir.workspace = true
jals-lint.workspace = true
jals-lsp.workspace = true
jals-syntax.workspace = true
similar.workspace = true

[dev-dependencies]
tempfile = "3"
