[package]
name = "jals-config"
version.workspace = true
edition.workspace = true

[dependencies]
# The config data models for `jals.toml` / `jalsfmt.toml` / `jalslint.toml`, plus their parsing and
# discovery. Pure/`no_std`: loaders read an immutable `jals-storage` revision, so this crate has no
# direct filesystem access and stays `wasm32`-compatible.
jals-storage.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

[lints]
workspace = true
