[package]
name = "jals-exec"
version.workspace = true
edition.workspace = true

[features]
default = []
# Enables `std`-backed panic propagation plumbing. Implied by `tokio`.
std = []
# The native runtime adapter: a current-thread tokio runtime + `LocalSet` bootstrap and a
# persistent worker-thread pool backing `Exec::fan_out`.
tokio = ["std", "dep:tokio"]
# The browser runtime adapter: `spawn_local` tasks and macrotask-escaping yields.
wasm = ["dep:wasm-bindgen-futures", "dep:gloo-timers"]

[dependencies]
tokio = { workspace = true, optional = true, features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros", "time"] }

[lints]
workspace = true
