[package]
name = "jals-fmt"
version.workspace = true
edition.workspace = true

[dependencies]
# The config loaders (`Config::from_file` / `Config::discover`) read through the `jals-fs` `FileTree`
# abstraction — pure/`no_std` here (the host passes an `OsFileTree`; wasm passes an in-memory tree).
jals-fs.workspace = true
jals-syntax.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
unicode-width.workspace = true

[dev-dependencies]
expect-test = "1.5"
proptest = "1"
