[package]
name = "jals-fmt"
version.workspace = true
edition.workspace = true

[dependencies]
# The formatter configuration (`Config` and its option enums) lives in `jals-config`, the shared
# config-model crate; `jals-fmt` re-exports it internally and formats with it.
jals-config.workspace = true
jals-syntax.workspace = true
unicode-width.workspace = true

[dev-dependencies]
expect-test = "1.5"
proptest = "1"
