[package]
name = "jals-fmt"
version.workspace = true
edition.workspace = true

[dependencies]
# WIP: the formatter is being rewritten from scratch, so this crate is currently a no-op
# skeleton (see `src/lib.rs`). It still accepts a `jals-config` formatter `Config` (ignored for
# now) and parses via `jals-syntax` to surface syntax-error warnings.
jals-config.workspace = true
jals-syntax.workspace = true

[lints]
workspace = true
