[package]
name = "jals-fs"
version.workspace = true
edition.workspace = true

[features]
# `std` unlocks the OS-filesystem-backed `OsFileTree` (synchronous `std::fs`). Off by default so the
# crate is `#![no_std]` — the `FileTree` trait, `InMemoryFileTree`, `FsError`, and the path helpers
# need only `core`/`alloc`. Host consumers (`jals-cli`, `jals-lsp`) turn it on; the wasm build leaves
# it off. There are no non-dev `[dependencies]`: the in-memory store is an `alloc::collections`
# `BTreeMap` and the OS impl uses `std::fs` directly (no `walkdir`), keeping the pure build dep-free.
default = []
std = []

[dev-dependencies]
tempfile = "3"
