[package]
name = "jals-lint"
version.workspace = true
edition.workspace = true

[dependencies]
# The linter configuration (`Config`) and the `Severity` value type live in `jals-config`, the shared
# config-model crate; `jals-lint` lints with them and re-exports `Severity` through `diagnostic`.
jals-config.workspace = true
jals-hir.workspace = true
jals-syntax.workspace = true

[dev-dependencies]
expect-test = "1.5"
proptest = "1"
