[package]
name = "jals-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-lsp = { workspace = true, features = ["tokio"] }
futures.workspace = true
jals-build.workspace = true
jals-classfile.workspace = true
jals-classpath.workspace = true
jals-config.workspace = true
jals-fmt.workspace = true
jals-fs = { workspace = true, features = ["std"] }
jals-hir.workspace = true
jals-lint.workspace = true
jals-syntax.workspace = true
serde_json.workspace = true
text-size.workspace = true
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
tempfile = "3"
