[package]
name = "jals-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-lsp = { workspace = true, features = ["tokio"] }
futures.workspace = true
jals-build = { workspace = true, features = ["native"] }
jals-classfile.workspace = true
jals-classpath.workspace = true
jals-config.workspace = true
jals-editor.workspace = true
jals-exec = { workspace = true, features = ["tokio"] }
jals-fmt.workspace = true
jals-storage = { workspace = true, features = ["std"] }
jals-hir.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower.workspace = true

# async-lsp's asynchronous `stdio` pipe helpers are unix-only; elsewhere the server loop drives
# tokio's stdin/stdout (which need `io-std`) adapted to futures' IO traits via tokio-util.
[target.'cfg(not(unix))'.dependencies]
tokio = { workspace = true, features = ["io-std"] }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
