[package]
name = "jals-playground"
version.workspace = true
edition.workspace = true

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
jals-fmt = { workspace = true }
jals-fs = { workspace = true }
jals-hir = { workspace = true }
jals-lint = { workspace = true }
jals-syntax = { workspace = true }
js-sys = "0.3"
text-size = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Element",
  "HtmlInputElement",
  "HtmlSelectElement",
] }
