[package]
name = "jals-playground"
version.workspace = true
edition.workspace = true

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
# The wasm-compatible core (no `native`): the browser supplies its own `Fetcher` + `MemoryStorage`.
# A direct path (not `workspace = true`) so `default-features = false` can turn off the host `native`
# feature — Cargo forbids a workspace-inherited dep from overriding the workspace's default-features.
jals-classpath = { path = "../jals-classpath", default-features = false, features = [
  "archive",
] }
jals-config = { workspace = true }
jals-editor = { workspace = true }
jals-fmt = { workspace = true }
jals-storage = { workspace = true }
jals-hir = { workspace = true }
jals-syntax = { workspace = true }
# Browser `fetch` for downloading dependency jars (already in the tree via yew's `gloo`).
gloo-net = { version = "0.7", default-features = false, features = ["http"] }
js-sys = "0.3"
# Parses the `jalsfmt.toml` editor buffer into `jals_config::fmt::Config` (the `jals.toml` buffer
# goes through `Manifest::from_str`, which already pulls in `toml`).
toml = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Element", "HtmlInputElement"] }
