[package]
name = "jals-playground"
version.workspace = true
edition.workspace = true

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
# The wasm-compatible core (no `native`): the browser supplies its own `Fetcher` + `MemoryStorage`.
# A direct path (not `workspace = true`) so `default-features = false` can turn off the host `native`
# feature — Cargo forbids a workspace-inherited dep from overriding the workspace's default-features.
jals-classpath = { path = "../jals-classpath", default-features = false, features = [
  "archive",
] }
# Portable Rhai build scripts over the playground's existing `MemoryStorage`; keep the native
# JDK/process adapters out of the wasm graph.
jals-build = { workspace = true, features = [
  "rhai",
] }
jals-project.workspace = true
jals-config = { workspace = true }
jals-editor = { workspace = true }
# The browser runtime adapter (`Exec::wasm()`): `spawn_local` tasks and macrotask-escaping yields
# so the page paints during long parses. Host-side tests use `Exec::inline`/`block_on_inline`.
jals-exec = { workspace = true, features = ["wasm"] }
jals-fmt = { workspace = true }
jals-storage = { workspace = true }
jals-hir = { workspace = true }
jals-syntax = { workspace = true }
# `futures::lock::Mutex` — the FIFO-fair, single-thread-safe async lock serializing every
# workspace touch (providers hold it across their awaits; no `RefCell` borrow crosses an await).
futures = { workspace = true }
# Browser `fetch` for downloading dependency jars (already in the tree via yew's `gloo`).
gloo-net = { version = "0.7", default-features = false, features = ["http"] }
js-sys = "0.3"
# Parses the `jalsfmt.toml` editor buffer into `jals_config::fmt::Config` (the `jals.toml` buffer
# goes through `Manifest::from_str`, which already pulls in `toml`).
toml = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Element", "HtmlInputElement"] }
