[package]
name = "jals-project"
version.workspace = true
edition.workspace = true

[features]
default = ["native"]
native = [
  "dep:tempfile",
  "jals-classpath/native",
  "jals-exec/tokio",
  "jals-storage/std",
]

[dependencies]
jals-build = { workspace = true, features = ["rhai"] }
jals-classpath = { path = "../jals-classpath", default-features = false, features = [
  "archive",
] }
jals-config.workspace = true
jals-exec.workspace = true
# Featureless and portable: lowering a dependency's sources happens inside the portable `assemble`
# step, so the frontend crate must build wherever `jals-project` does (including `wasm32`).
jals-frontend.workspace = true
jals-storage.workspace = true
serde_json.workspace = true
serde.workspace = true
tempfile = { version = "3", optional = true }

[dev-dependencies]
# Writes the jar fixtures a build task extracts from; the product reads archives through
# `jals-classpath`'s in-house reader, never this.
zip.workspace = true

[lints]
workspace = true
