[package]
name = "jals-storage"
version.workspace = true
edition.workspace = true

[features]
default = []
# `std::io` bridge adapters for the portable `io` module only — no host paths; wasm-safe.
std-io = []
std = ["std-io"]

[dependencies]
sha2.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
