[package]
name = "jals-syntax"
version.workspace = true
edition.workspace = true

[dependencies]
jals-exec.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rowan.workspace = true
text-size.workspace = true
unicode-properties.workspace = true

[dev-dependencies]
expect-test = "1.5"
proptest = "1"

[lints]
workspace = true
